# movieapp

./: Cargo.toml  README.md
src/: handler.rs  main.rs  model.rs  utils.rs
static/css/: base.css  index.css  login.css
templates/: base.tera  index.tera  login.tera  profile.tera  signup.tera
