[package]
name = "movieapp"
version = "0.1.0"
authors = ["Kenneth Gitere <gitere81@gmail.com>"]
edition = "2018"

[dependencies]
actix-files="0.1.4"
actix-identity="0.1.0"
actix-web={version = "1.0.5", features = ["ssl"]}
argonautica="0.2.0"
bson="0.13.0"
chrono={ version = "0.4.7", features = ["serde"]}
env_logger="0.6.2"
futures="0.1.28"
log="0.4.8"
mongodb="0.3.12"
r2d2="0.8.5"
r2d2-mongodb="0.2.2"
serde="1.0.98"
serde_derive="1.0.98"
tera="0.11.20"